# code_checker

./: Dockerfile  pyproject.toml  requirements.txt
src/scanner/: __init__.py
src/tests/: test_api.py  test_dep_scan.py  test_sast.py
