[tool.poetry]
name = "code_checker"
version = "0.1.0"
description = "A modular and scalable security scanner with CLI and FastAPI web UI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"
pytest = "^6.2.4"
safety = "^1.10.3"
pyyaml = "^5.4.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
